[package]
name = "cheetah-plugin-host"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cheetah-plugin-sdk = { path = "../cheetah-plugin-sdk" }
cheetah-signal-contracts = { path = "../../foundation/cheetah-signal-contracts" }
cheetah-signal-types = { path = "../../foundation/cheetah-signal-types" }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "process", "io-util", "net", "fs"] }
tokio-stream = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true, features = ["tls-ring"] }
prost = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
x509-parser = "0.18.1"
futures = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tonic = { workspace = true }
rcgen = "0.14"

[lints]
workspace = true
